- a few bugs... the playback isn't as smooth. It kinda works, but there's too much work from the end user in the end

--- a/background-music-experiment/src/styles/App.css
+++ b/background-music-experiment/src/styles/App.css
@@ -86,7 +86,7 @@ a {
 .message{
   height: 100%;
   width: 90%;
-  animation: messageScroll 30s alternate infinite;
+  animation: messageScroll 20s alternate infinite;
   margin: 20%;
 }
 
